pod-display-deployment.yml
# pod-display-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: pod-display-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: pod-display
  template:
    metadata:
      labels:
        app: pod-display
    spec:
      containers:
      - name: pod-display-container
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html-volume
          mountPath: /usr/share/nginx/html
          readOnly: true
      volumes:
      - name: html-volume
        configMap:
          name: pod-display-configmap
