pod-display-ingress.yml
# pod-display-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pod-display-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: ip-172-31-40-97
    http:
      paths:
      - path: /pod1
        pathType: Prefix
        backend:
          service:
            name: pod-display-deployment
            port:
              number: 80
        value: POD_UID=1
      - path: /pod2
        pathType: Prefix
        backend:
          service:
            name: pod-display-deployment
            port:
              number: 80
        value: POD_UID=2
      - path: /pod3
        pathType: Prefix
        backend:
          service:
            name: pod-display-deployment
            port:
              number: 80
        value: POD_UID=3
